# KPackage

./: CMakeLists.txt
include/: VFS.h  VFS.h~  VFS_Config.h  VFS_Config.h.Unstable~  VFS_Implementation.h  VFS_Implementation.h~
src/: VFS_Archive.cpp  VFS_ArchiveFile.cpp  VFS_Archives.cpp~  VFS_Basic.cpp  VFS_Dirs.cpp  VFS_Files.cpp  VFS_StdIOFile.cpp  VFS_StdIOFile.cpp~  VFS_Utilities.cpp
